tests/integration/errors/003_invalid_context.nesl
<<<<<<<<<nesl
{
  arr = [
    - R"""pv(valid item)pv"""
    invalid = R"""pv(assignment in array)pv"""
    - R"""pv(another item)pv"""
  ]
}
=========nesl